syntax = "proto3";

package master_data;

import "common/commons.proto";

message NotificationType {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string description = 7;
}

message CreateNotificationTypeInput {
  string code = 1;
  string name = 2;
  int32 sortOrder = 3;
  string description = 4;
}

message UpdateNotificationTypeInput {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string description = 5;
}

message NotificationTypeList {
  repeated NotificationType data = 1;
}
